# armadito-prelude

./: .gitignore  .travis.yml  README.md  configure.ac
perl/: .gitignore  .perlcriticrc  .perltidyrc  Changes  MANIFEST  MANIFEST.SKIP  Makefile.PL  README  build.sh  do_all.sh  run.sh
perl/etc/: prelude.cfg
perl/lib/Armadito/: Prelude.pm
perl/lib/Armadito/Prelude/: Client.pm  IDMEF.pm  Logger.pm
perl/lib/Armadito/Prelude/HTTP/: Client.pm
perl/lib/Armadito/Prelude/HTTP/Client/: ArmaditoAV.pm
perl/lib/Armadito/Prelude/HTTP/Client/ArmaditoAV/: Event.pm
perl/lib/Armadito/Prelude/HTTP/Client/ArmaditoAV/Event/: DetectionEvent.pm  OnDemandCompletedEvent.pm  OnDemandProgressEvent.pm  StatusEvent.pm
perl/lib/Armadito/Prelude/Logger/: Backend.pm  File.pm  Stderr.pm  Syslog.pm
perl/lib/Armadito/Prelude/Tools/: Dir.pm  File.pm  Security.pm  Time.pm
perl/lib/Armadito/Prelude/XML/: Parser.pm
perl/t/: 00-compile.t  00-perl-critic.t  Armadito-Prelude.t
python/: .gitignore  README.md
python/src/: Makefile.am
python/src/armadito/: rest.py
src/: Makefile.am  armadito-prelude-agent.in  armadito-prelude-agent.py
src/armadito/: Makefile.am  prelude.py  probe.py  rest.py
